// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render 1`] = `
<Box
  display="block"
  gridArea="result"
  margin="s20"
>
  <Box
    key="__TITLE__"
    marginBottom="s8"
  >
    <ProductCard
      channel="TV8"
      date="9:00"
      header="__TITLE__"
      imageURL="__IMAGE_URL__"
    />
  </Box>
  <Box
    bottom="200px"
    position="relative"
  />
</Box>
`;

exports[`ProductCard should render when mobile 1`] = `
<Box
  display="block"
  gridArea="result"
  marginTop="s8"
>
  <Box
    key="__TITLE__"
    marginBottom="s8"
  >
    <ProductCard
      channel="TV8"
      date="9:00"
      header="__TITLE__"
      imageURL="__IMAGE_URL__"
    />
  </Box>
  <Box
    bottom="200px"
    position="relative"
  />
</Box>
`;

exports[`ProductCard should render when no products prop 1`] = `
<Box
  display="block"
  gridArea="result"
  margin="s20"
>
  <Box
    key="__TITLE__"
    marginBottom="s8"
  >
    <ProductCard
      channel="TV8"
      date="9:00"
      header="__TITLE__"
      imageURL="__IMAGE_URL__"
    />
  </Box>
  <Box
    bottom="200px"
    position="relative"
  />
</Box>
`;
